# esp32_1.3_ips

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.old
components/gui/: CMakeLists.txt  gui.c
components/gui/include/: gui.h
components/lvgl/: CMakeLists.txt  lv_conf.h  lv_port_disp.c  lv_port_disp.h
components/lvgl/lvgl_port/: lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
components/st7789/: CMakeLists.txt  Kconfig.projbuild  st7789.c  st7789_spi.c
components/st7789/include/: st7789.h
components/user_dev/: CMakeLists.txt  user_cpu_test.c  user_cpu_test.h  user_dev_inc.h  user_key.c  user_key.h  user_led.c  user_led.h  user_uart.c  user_uart.h
components/user_dev/SPI/: User_dev_spi.c  User_dev_spi.h
components/user_mid/: CMakeLists.txt  User_mid_LCD.c  User_mid_LCD.h
components/wifi_connect/: CMakeLists.txt  Kconfig.projbuild  wifi_connect.c
components/wifi_connect/include/: wifi_connect.h
main/: hello_world_main.c  main.c
