idf_component_register(	SRC_DIRS "src/core" 
						SRC_DIRS "./"
						SRC_DIRS "src/draw"
						SRC_DIRS "src/draw/sw"
						SRC_DIRS "src/extra"
						SRC_DIRS "src/extra/layouts"
						SRC_DIRS "src/extra/layouts/flex"
						SRC_DIRS "src/extra/layouts/grid"
						SRC_DIRS "src/extra/libs"
						SRC_DIRS "src/extra/libs/bmp"
						SRC_DIRS "src/extra/libs/freetype"
						SRC_DIRS "src/extra/libs/fsdrv"
						SRC_DIRS "src/extra/libs/gif"
						SRC_DIRS "src/extra/libs/png"
						SRC_DIRS "src/extra/libs/qrcode"
						SRC_DIRS "src/extra/libs/rlottie"
						SRC_DIRS "src/extra/libs/sjpg"
						SRC_DIRS "src/extra/themes"
						SRC_DIRS "src/extra/others"
						SRC_DIRS "src/extra/others/snapshot"
						SRC_DIRS "src/extra/themes/basic"
						SRC_DIRS "src/extra/themes/default"
						SRC_DIRS "src/extra/themes/mono"
						SRC_DIRS "src/extra/widgets"
						SRC_DIRS "src/extra/widgets/animimg"
						SRC_DIRS "src/extra/widgets/calendar"
						SRC_DIRS "src/extra/widgets/chart"
						SRC_DIRS "src/extra/widgets/colorwheel"
						SRC_DIRS "src/extra/widgets/imgbtn"
						SRC_DIRS "src/extra/widgets/keyboard"
						SRC_DIRS "src/extra/widgets/led"
						SRC_DIRS "src/extra/widgets/list"
						SRC_DIRS "src/extra/widgets/meter"
						SRC_DIRS "src/extra/widgets/msgbox"
						SRC_DIRS "src/extra/widgets/span"
						SRC_DIRS "src/extra/widgets/spinbox"
						SRC_DIRS "src/extra/widgets/spinner"
						SRC_DIRS "src/extra/widgets/tabview"
						SRC_DIRS "src/extra/widgets/tileview"
						SRC_DIRS "src/extra/widgets/win"
						SRC_DIRS "src/extra/widgets/menu"
						SRC_DIRS "src/gpu"
						SRC_DIRS "src/font"
						SRC_DIRS "src/hal"
						SRC_DIRS "src/misc"
						SRC_DIRS "src/widgets"
						# SRC_DIRS "user_lv_font"
						# SRC_DIRS "user_lv_img"
						SRC_DIRS "lvgl_port"
						# SRC_DIRS "GUI_APP"
						# INCLUDE_DIRS "GUI_APP"
                       INCLUDE_DIRS "./"
                       PRIV_REQUIRES driver user_dev user_mid) 